objects/project_cloud__KPI__c.object
<CustomObject>
    <description>Object for capturing KPI information.</description>
    <fields>
        <fullName>project_cloud__Baseline__c</fullName>
        <inlineHelpText>The baseline for the KPI.</inlineHelpText>
        <label>Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>A short description of the KPI.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__KPI_Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Defines the KPI Area that this KPI is related to.</inlineHelpText>
        <label>KPI Area</label>
        <referenceTo>project_cloud__KPI_Area__c</referenceTo>
        <relationshipLabel>KPIs</relationshipLabel>
        <relationshipName>KPIs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Project that this KPI is related to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>KPIs</relationshipLabel>
        <relationshipName>KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{00000000}</displayFormat>
        <label>KPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>